--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -7,6 +7,9 @@ window:
     dynamic_padding: true
     decorations: none
 
+# Send ESC (\x1b) before characters when alt is pressed.
+alt_send_esc: true
+
 font:
   size: 12
   normal:
