--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
 # terminal name must come before new sessions
 set -g default-terminal "screen-256color"
 
+set -g default-shell /usr/bin/zsh
+
 # bind key
 set -g prefix C-a
 bind C-a send-prefix
@@ -27,37 +29,49 @@ bind j join-pane -s !
 set -g mode-keys vi
 set-option -g status-keys vi
 bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
-bind p run "xclip -o -sel clip | tmux load-buffer - ; tmux paste-buffer"
+
+# for X
+if-shell -b 'echo $XDG_SESSION_TYPE | grep -q x11' "\
+    bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard > /dev/null'; "
+
+# for wayland
+if-shell -b 'echo $XDG_SESSION_TYPE | grep -q wayland' "\
+    bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'wl-copy'; "
+
+# for macos
+#bind p run "xclip -o -sel clip | tmux load-buffer - ; tmux paste-buffer"
 
 # keyboard
 set-window-option -g xterm-keys on
 set-option -g renumber-windows on
-bind-key -n M-j new-window -c "#{pane_current_path}"
-bind-key -n M-h previous-window
-bind-key -n M-l next-window
-bind-key -n M-left swap-window -d -t -1
-bind-key -n M-right swap-window -d -t +1
+bind-key c new-window -c "#{pane_current_path}"
+bind-key n      command-prompt 'rename-window %%'
+bind-key N      command-prompt 'rename-session %%'
+bind-key P      command-prompt 'choose-buffer'
+bind-key <   swap-window -d -t -1
+bind-key >   swap-window -d -t +1
 
 # key press synchronize panes
 bind a set-window-option synchronize-panes
+
+# default statusbar colors
+set-option -g status-style "fg=#a09f93,bg=#393939"
 
 # status line
 setw -g automatic-rename on
 set -g status-right ''
 
-# colors
-
 # Set the left and right status
-set -g status-left ''  # only window names
-set -g status-right '[#S]'  # user
+set -g status-left '#S | ' 
+# set -g status-right '#S | %h %d %H:%M | #{cpu_fg_color} #{cpu_percentage} #{ram_fg_color} #{ram_percentage}'
+set -g status-right '%h %d %H:%M | #{battery_percentage}'
 
-# default statusbar colors
-set-option -g status-style "fg=#a09f93,bg=#393939"
 # default window title colors
+set-window-option -g window-status-current-format '#I #W'
+set-window-option -g window-status-format '#I #W'
 set-window-option -g window-status-style "fg=#a09f93,bg=#393939"
-# active window title colors
-set-window-option -g window-status-current-style "fg=#a09f93,bg=#515151"
+set-window-option -g window-status-current-style "fg=#a09f93,bg=#717171"
+
 # pane border
 set-option -g pane-border-style "fg=#a09f93"
 set-option -g pane-active-border-style "fg=#d3d0c8"
@@ -71,6 +85,13 @@ set-window-option -g clock-mode-colour "#a09f93"
 # bell
 set-window-option -g window-status-bell-style "fg=#a09f93,bg=#747369"
 
-# plugins
+# plugins from https://github.com/tmux-plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+
+
 run '~/.tmux/plugins/tpm/tpm'
