Improve starship config

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -5,5 +5,15 @@ success_symbol = "[#](bold green)"
 error_symbol = "[#](bold red)"
 vicmd_symbol = "[❮](bold green)"
 
+[cmd_duration]
+min_time = 0
+
 [gcloud]
 disabled = true
+
+[ruby]
+detect_variables = []
+
+[java]
+symbol = " "
+format = "via [${symbol}]($style)"
