--- a/.tmux.conf
+++ b/.tmux.conf
@@ -92,6 +92,7 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 
 run '~/.tmux/plugins/tpm/tpm'
