--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # terminal name must come before new sessions
 set -g default-terminal "screen-256color"
 
-set -g default-shell /usr/bin/zsh
+#set -g default-shell /usr/bin/zsh
 
 # bind key
 set -g prefix C-a
