--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,6 +50,8 @@ bind-key N      command-prompt 'rename-session %%'
 bind-key P      command-prompt 'choose-buffer'
 bind-key <   swap-window -d -t -1
 bind-key >   swap-window -d -t +1
+bind-key =   next-window 
+bind-key -   next-window 
 
 # key press synchronize panes
 bind a set-window-option synchronize-panes
